--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
+      <form id="book-form">
+        <label>Book id:
+          <input type="text" name="book-id" value="">
+        </label>
+        <input type="submit" name="submit" value="GET Book(s)">
+      </form>
       <h1>Example</h1>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
